# zstorage

./: .gitignore  Cargo.toml  canister_ids.json  dfx.json  package-lock.json  package.json
canisters/key_manager/: Cargo.toml  key_manager.did
canisters/key_manager/src/: authorization.rs  lib.rs
canisters/storage/: Cargo.toml  storage.did
canisters/storage/src/: lib.rs
crates/stealth_client/: Cargo.toml
crates/stealth_client/src/: lib.rs
crates/stealth_client/tests/: pocket_ic_flow.rs
docs/: deployment_guide.md  environment_setup.md  stealth_announcement_spec.md
stealth_client/: Cargo.toml
stealth_client/benches/: ibe_decrypt.rs
stealth_client/src/: authorization.rs  client.rs  encryption.rs  error.rs  invoice.rs  lib.rs  recipient.rs  sender.rs  types.rs  view_key.rs
stealth_client/tests/: pocket_ic_flow.rs
ts-client/: .eslintrc.cjs  package-lock.json  package.json  tsconfig.build.json  tsconfig.json
ts-client/src/: authorization.ts  client.ts  config.ts  encryption.ts  errors.ts  index.ts  invoice.ts  recipient.ts  types.ts
ts-client/src/__tests__/: authorization.test.ts  encryption.test.ts
