[package]
name = "key_manager"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
anyhow.workspace = true
base64.workspace = true
bls12_381.workspace = true
candid.workspace = true
hex.workspace = true
hkdf.workspace = true
ic-cdk.workspace = true
ic-cdk-macros.workspace = true
ic-ledger-types.workspace = true
ic-stable-structures.workspace = true
alloy-primitives.workspace = true
serde.workspace = true
serde_bytes.workspace = true
sha2.workspace = true
sha3.workspace = true
subtle.workspace = true
thiserror.workspace = true
