[package]
name = "storage"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
anyhow.workspace = true
base64.workspace = true
candid.workspace = true
hex.workspace = true
ic-cdk.workspace = true
ic-cdk-macros.workspace = true
ic-stable-structures.workspace = true
alloy-primitives.workspace = true
serde.workspace = true
serde_bytes.workspace = true
sha3.workspace = true
