[package]
name = "stealth_client"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib"]

[dependencies]
anyhow.workspace = true
aes-gcm.workspace = true
base64.workspace = true
bls12_381.workspace = true
candid.workspace = true
hex.workspace = true
hkdf.workspace = true
ic-ledger-types.workspace = true
ic-vetkeys.workspace = true
k256.workspace = true
rand.workspace = true
serde.workspace = true
serde_bytes.workspace = true
sha2.workspace = true
sha3.workspace = true
thiserror.workspace = true
subtle.workspace = true
